--- a/6/Untitled0.ipynb
+++ b/6/Untitled0.ipynb
@@ -14,18 +14,19 @@
       "from collections import *\n",
       "from math import *\n",
       "from numpy import array, cos, sin\n",
-      "\n",
+      "from pylab import *\n",
+      "import scipy\n",
       "P = namedtuple('Point', ['x', 'y']);\n",
       "def area_rectangle_tl_br(tl,br):\n",
       "    return abs(tl.x-br.x) * abs(tl.y-br.y)\n",
-      "\n",
+      "from IPython.display import Image\n",
       "#degrees = 180 * radians / pi\n",
       "#radians = pi * degrees / 180\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 93
+     "prompt_number": 133
     },
     {
      "cell_type": "code",
@@ -53,7 +54,7 @@
       "    r = vector_length(pc,p1)\n",
       "    area_cirlce = (r*r)*pi\n",
       "    return area_cirlce * (get_angle_between_3_points(pc,p1,p2) / (2.*pi))  \n",
-      "assert abs(   area_pie_slice ( P(0,0), P(0,1), P(1,0)  ) - pi/4 ) < 0.000000001"
+      "assert abs(   area_pie_slice ( P(0,0), P(0,1), P(1,0)  ) - pi/4 ) < 0.0000000010, 4.5)"
      ],
      "language": "python",
      "metadata": {},
@@ -77,19 +78,89 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "f=lambda x: (sqrt(1-x**2))\n",
+      "rng=arange(-1,+1,0.001)\n",
+      "plot(map(f,rng))"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 103
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 162,
+       "text": [
+        "[<matplotlib.lines.Line2D at 0x58dd790>]"
+       ]
+      },
+      {
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAXsAAAD9CAYAAABdoNd6AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XtYVWW+B/DvNhjzrnkL9yYpNnFRBBOvZWJqqBVp2og2\nZqZmTsY4XcbTnGnEOU8qZ2oaR2pGS7upDN0MT8GucMJLCnhBHcUUFRLwFuYFtcQ26/zxm1AUNyBr\n7Xftvb+f5+FJYLnWj9X2y7vf9V4smqZpICIir9ZEdQFERGQ8hj0RkQ9g2BMR+QCGPRGRD2DYExH5\nAIY9EZEPqDPsH3/8cXTu3BmRkZHXPCYxMREhISGIiopCfn6+rgUSEVHj1Rn2kydPhsPhuOb3MzIy\nsH//fhQWFmLJkiWYMWOGrgUSEVHj1Rn2AwcORLt27a75/dWrV2PSpEkAgL59++LUqVM4duyYfhUS\nEVGjNbrPvqysDIGBgdWf22w2lJaWNva0RESkIz89TnLligsWi+WqY2r7GhER1U2PVW0aHfZWqxUl\nJSXVn5eWlsJqtdZ6LJfh0U9SUhKSkpJUl2GYH38Edu4Etm4FtmyRj337gIAAIDz80ofdDnTtCnTp\nAvziF9d3rcbcyx9+AIqKgP375ePAAeCbb6R2TQOiooAePYDoaKBvX+D224EmXj4Gzttfm+6mV0O5\n0WEfHx+PlJQUJCQkICcnB23btkXnzp31qI18yIkTwPr1wNq18t+CAgnGmBj5ePJJoFs3oHlz1ZXW\n1KwZEBEhH5fTNODoUQn9HTsAhwNISgJOnwb69QMGDAD695cPs/1M5J3qDPvx48dj7dq1KC8vR2Bg\nIObOnYuLFy8CAKZPn46RI0ciIyMDdrsdLVq0wFtvvWV40eT5zp8HvvpKQjA7G/j2WwnAQYOAhQuB\nO+6QIPVUFou8CwkIAOLiLn39yBFg0yb5ePFF+WXQty8wdCgwbBjQsydwww3q6ibvZXHXEscWi4Xd\nODrKzs5GbGys6jIa5MABICNDPjZsAHr1AkaMAAYPlnD30+UJUsOpvJdnzgDr1gFffglkZcm7gbg4\nYNQoYPhwoHVrJWU1iie+Ns1Mr+xk2JOhvvkG+OAD+fjuO2DkSPkYOhRo00Z1deZTVgZ8+imQni6/\nEO+6S4L/wQcB9o76JoY9mdaBA8DKlRLw5eXA2LHAL38p3TTe/nBST2fOSDfXqlVAZqb09f/qVxL+\nLVuqro7chWFPpnL2LPDhh8BbbwF79gDjxknA33knA14P584Bq1cDK1ZIi3/kSODRR6Wfn3383o1h\nT8ppGpCbC7zxBvDxx9LlMHkycP/91z8Mkur23XfA++/LL9bycmDaNODxx+VhMHkfhj0p8+OPQFoa\nsGgRcPIkMH06MHEiw0aFrVuBxYuly2zIEBmiOmSIjAYi78CwJ7crKwNefx14802ZJJSYKKNp2E2j\n3pkz0sXz+usS9M8+C4wfz3dY3oBhT26zbx+QnCwPCh95BJg5EwgNVV0V1UbTgC++AF55Bdi9W/5f\nPfkk4GItQzI5vbKTbTK6pm3bgIcflr74W24BCgul64ZBb14Wi4zT/+ILmc/wzTeypMR//Zf09ZPv\nYtjTVbZuldEe8fEynf/gQWDOHKB9e9WVUUNERQHvvAPk58syDWFhwOzZDH1fxbCnanv2SEv+gQeA\n++6T8fLPPMMx3Z7ulluAv/9dQr+i4lLof/+96srInRj2hOJiGTI5aBDQu7es3vjUU0DTpqorIz3d\ncos8wN2+HTh1SrrjXn5ZRleR92PY+7CKCuCFF2RVyZ/75H/3O67C6O0CA2W45rp1ssJoWJiM5Kmq\nUl0ZGYlh74OqqoBly6Rld/iwrLw4dy7XqvE14eGyBs+77wJ/+5u8q9u4UXVVZBQOvfQxGzYAv/mN\ndNH89a9Anz6qKyIz0DQgNRV4/nng3ntlqG2nTqqrIoBDL6mBvv8emDoVSEgAnnsO+PprBj1dYrEA\nEybIQ/qbbpKNYlJSgJ9+Ul0Z6YVh7+U0Tfpjf97lqaBAZlZyOj3VpnVrmZCVnQ189JF07Wzdqroq\n0gO7cbzYgQPAjBnA8ePAkiVsyVPDaBqwfLm8E5w8WeZaePLuYZ6K3Th0TVVV8sCtb1+ZTbllC4Oe\nGs5ikQXudu6UiXXR0dL9R56JLXsvU1wsy93++KPMngwJUV0ReYuPP5a1dh5+GFiwgK18d2HLnmrQ\nNGDpUuljHT5cxk8z6ElPDz0E7Nolyy306iWTs8hzsGXvBcrLpTVfWipjprt3V10RebsVK4Df/laG\naj77LJe5NhJb9gQAWLsW6NlTZkHm5DDoyT0eeQTIy5OtEocMAUpKVFdEdWHYeyinU2a9JiTISJv/\n/V9uVEHuFRQkQzSHDpUlNzIzVVdErrAbxwOVlUnLqkkTGRrXpYvqisjXrV8v8zcee0waIdwEXT/s\nxvFR69fLQ9h77gG+/JJBT+YwcKBMvtq0SZZbOHZMdUV0JYa9h9A0mb4+dqwsYvbHP7L1RObSubPs\nkDVggIzW2bBBdUV0OXbjeIAffpB9RPPzZR/Y4GDVFRG5lpEhXTrz5wNTpqiuxrOxG8dHlJbKW+TK\nSnmLzKAnTzBypHQ5JicDs2ZxQTUzYNib2NatQL9+MmNx5UqgRQvVFRHVX2gokJsri++NHAmcPKm6\nIt/GsDep9HSZCfu3v8l+oVylkjxRu3bSpdOtmzRcCgtVV+S7/FQXQDVpmmwq8vLL8o+kd2/VFRE1\njp8f8OqrsjPW3XcDn3wii/SRe/EBrYk4nUBiouwN+umnQNeuqisi0tenn8pyycuWAQ88oLoaz8AH\ntF7mwgWZDbt3rywjy6Anb3T//cBnnwFPPCGbnpP7sBvHBCoqgNGjgbZt5R9C06aqKyIyTp8+MlJn\n+HAZbfanP/GZlDuwZa9YebnMhg0OBtLSGPTkG+x2YONGeS6VmCgb7pCxGPYKlZTIGPp77wX+8Q/O\niCXf0qkT8K9/Adu2ycQrp1N1Rd6tzrB3OBwICwtDSEgIkpOTr/p+eXk5hg8fjujoaHTv3h1vv/22\nEXV6naIiGZkwdSrw0kt8G0u+qU0bWWKhpASYMAG4eFF1Rd7L5Wgcp9OJ0NBQZGVlwWq1onfv3khN\nTUV4eHj1MUlJSbhw4QLmz5+P8vJyhIaG4tixY/Dzq/k4gKNxLjl4ULpunn8eeOop1dUQqffjjzJ5\n0GIB3n8fuPFG1RWZh1tG4+Tl5cFutyMoKAj+/v5ISEhAenp6jWMCAgJw5swZAMCZM2fQvn37q4Ke\nLjlwABg8WCZKMeiJxI03yh63zZoBo0ZJ+JO+XKZyWVkZAgMDqz+32WzIzc2tccy0adNwzz33oEuX\nLqioqMD7779/zfMlJSVV/zk2NhaxsbHXV7WHKiyUXX3+8AcZekZEl/j7y3aH48dLK/+jj3xzQ57s\n7GxkZ2frfl6XYW+pR0fyvHnzEB0djezsbBw4cADDhg3Djh070KpVq6uOvTzsfc3+/dJ1M2eO9NMT\n0dX8/GQdqIcflnknaWnyS8CXXNkQnjt3ri7nddmNY7VaUXLZ5pIlJSWw2Ww1jtm4cSMefvhhAEBw\ncDBuvfVW7N27V5fivEVpKTBsGPDiiwx6orr4+0vIV1bKjmxcMVMfLsM+JiYGhYWFKC4uRmVlJdLS\n0hAfH1/jmLCwMGRlZQEAjh07hr179+K2224zrmIPc/y47NH51FPsuiGqr6ZNgQ8/BE6fBiZN4jh8\nPdS5Nk5mZiZmzZoFp9OJKVOm4IUXXsDi/8xznj59OsrLyzF58mQcOnQIVVVVeOGFFzBhwoSrL+SD\no3FOnZKHsQ88ILMEiahhfvgBGDECiIyUFWB9cYiyXtnJhdAMcvasTJbq00dW/PPFFymRHk6fBgYN\nAsaMka5QX6NXdnKMpAEuXpQHTKGhwF/+wqAnaow2bQCHA7jzTpl1O3266oo8E8NeZ5oGzJgBNGkC\nvPGG/JeIGufmm2Wm7cCBQIcO0sqnhmHY6+x//gfYvh3IzpZhZESkj+BgWRU2Lk4Cf9Ag1RV5FrY7\ndfTWW8Dbb8sGDS1bqq6GyPv07AmkpgK//CWwb5/qajwLH9Dq5PPPZYjY2rXSV09ExnnzTSA5GcjJ\nAdq3V12NsTgax0QKCoDYWFnb4667VFdD5BtmzwY2bQK+/NK794Fg2JvEiROyefKLL0rLnojco6pK\nRr21bCndp9466o170JrAxYvSdzhqFIOeyN2aNAHee0/eWc+fr7oa82PLvhGefloWOPv0U+4yRaTK\n4cNA797Sjz9ihOpq9MeWvWJLlkhfYWoqg55IpS5dZMOTxx6TxhfVji3765CTA8THAxs2ALffrroa\nIgKAv/8deP11eWjrTUOf+YBWke++A3r1AlJSJPCJyBw0TZYQr6iQJZK95YEtu3EUcDplfe0JExj0\nRGZjsQCvvQYUFwN//rPqasyHLfsGmDMHWLdO+uq5FAKROZWUyAPbjz6SxdM8HVv2buZwyNP+1FQG\nPZGZBQYCS5fKO/ATJ1RXYx5s2dfDzy2F998H7r5bdTVEVB/PPQfs3QusXu3Z/fds2buJ0wlMnAgk\nJjLoiTzJvHkyoOKvf1VdiTmwZV+H+fNlkbM1aziensjTFBfLcib/93+ya5wn4tBLN8jLk/1jt2yR\nfkAi8jyrVkmXzvbtQKtWqqtpOIa9wSoqZO3sBQuAsWNVV0NEjTF1qqyls2SJ6koajmFvsMcek1E3\nb76puhIiaqyKCiAqCli4UN6texJuOG6gjz4CNm4Etm1TXQkR6aFVK+Ddd2WV2r59ZeNyX8OW/RW+\n+w7o0UMCf8AA1dUQkZ5eeAHYs0f68T1lOCa7cQwybpw8jH35ZdWVEJHeKitlVE5iIvD446qrqR+G\nvQE++EB2nMrPB5o1U10NERlh505g6FAZndOli+pq6saw19nx49J9s2oV0L+/6mqIyEhz5gA7dnhG\ndw5n0OrsqadkpiyDnsj7/f73wL59wIcfqq7EfdiyB/DJJ7JT/fbt7L4h8hWbNgEPPQTs2gW0b6+6\nmmtjN45OKiqAbt2Ad94BBg9WXQ0RudOsWcDJk/Lv36wY9jp55hlZBtXM/7OJyBhnzwKRkcA//gHE\nxamupnYMex1s2ya70e/aBXTsqLoaIlIhMxN4+mnJgRtvVF3N1fiAtpGcTmD6dFn7hkFP5LtGjJCR\neN6+laHPtuwXLZIn8dnZ5h96RUTG+vZboFcvYPNm4NZbVVdTE7txGuH4cXkou3YtEBGhuhoiMoP5\n82WEzurVqiupiWHfCE88AbRoAbz6qupKiMgsLlyQ7pyXXzbXyphu67N3OBwICwtDSEgIkpOTaz0m\nOzsbPXv2RPfu3REbG9voooy0bZv85p4zR3UlRGQmTZsCr70m6+b88IPqavTnsmXvdDoRGhqKrKws\nWK1W9O7dG6mpqQgPD68+5tSpU7jzzjvx+eefw2azoby8HB06dLj6QiZo2Wua7CP76KPAtGlKSyEi\nkxozBoiJkRUyzcAtLfu8vDzY7XYEBQXB398fCQkJSE9Pr3HMypUrMWbMGNhsNgCoNejNIi0NOHfO\nc1a7IyL3S04GXnkFOHZMdSX6chn2ZWVlCLxs81WbzYaysrIaxxQWFuL777/H4MGDERMTg/fee8+Y\nShvp/Hngd7+TnWq4cTgRXYvdDkyaBPzxj6or0ZfLnaos9RiTePHiRWzbtg1r1qzB+fPn0b9/f/Tr\n1w8hISFXHZuUlFT959jYWLf277/6qixyNnCg2y5JRB7qD38AQkNlslX37u69dnZ2NrKzs3U/r8uw\nt1qtKCkpqf68pKSkurvmZ4GBgejQoQOaNWuGZs2a4e6778aOHTvqDHt3Ki+XsM/JUXJ5IvIw7dpJ\n4D/3HOBwuPfaVzaE586dq8t5XXbjxMTEoLCwEMXFxaisrERaWhri4+NrHPPggw9iw4YNcDqdOH/+\nPHJzcxFhssHrL70EjB8vb8+IiOpjxgygqMj9YW8Uly17Pz8/pKSkIC4uDk6nE1OmTEF4eDgWL14M\nAJg+fTrCwsIwfPhw9OjRA02aNMG0adNMFfZFRcB77wEFBaorISJP4u8vD2tnzwbuvRdo4uGLy3j9\npKpf/QoICeG4eiJqOE0D+vUDfvtbICFBTQ2cQVsP+fnAyJGyI02rVm69NBF5iaws4Ne/lt4BP5d9\nIcbgqpf18PvfA//93wx6Irp+Q4YAVqvn73nhtS37nBxg3DigsBD4xS/cdlki8kIbN8ogj337ZFkF\nd2LLvg5z50rLnkFPRI01YIDsaPWfsSkeyStb9mzVE5Hetm+XjU4OHACaN3ffddmyd4GteiLSW3S0\njMx5803VlVwfr2vZs1VPREbZsgUYPRrYv999ffds2V8DW/VEZJSYGFkr5913VVfScF7Vst+8Wdai\n3r+fYU9ExtiwQfbE2LfPPePu2bKvxZ//DDzzDIOeiIxz113ALbcAqamqK2kYr2nZ798vSxgXFQEt\nWxp2GSIiZGXJ8se7dxu/Zg5b9ld45RXgyScZ9ERkvCFDZGb+6tWqK6k/r2jZHzsGhIUBe/cCnToZ\ncgkiohrS0mSD8nXrjL0OW/aXSUmRFekY9ETkLmPGAN9+KwNDPIHHt+zPngVuvRXYtImbkxCRe/3l\nLxL2Rj6s5RLH/5GSAmRnAx9+qPupiYhcOnNGGpv5+TJCxwjsxgFQVSVhn5iouhIi8kWtWwOPPQYs\nWqS6krp5dNivWSNTlgcOVF0JEfmqxERg2TJp5ZuZR4f9okXAzJmAxaK6EiLyVV27AvfcAyxfrroS\n1zy2z/7gQaBPH+DQIfcuN0pEdKV//Qv4zW+AnTv1b3z6fJ/9668Dkycz6IlIvcGDgYsXZd0cs/LI\nlv25c/LWafNmeRJORKTawoVAbi6wcqW+5/Xpln1amqyDw6AnIrOYNAnIzASOH1ddSe08MuzffBN4\n4gnVVRARXdK2rcyqXbpUdSW187hunN27gWHD5MGsO9aSJiKqr61bJfAPHABuuEGfc/psN87SpfJg\nlkFPRGbTqxdw000yOsdsPKplf+ECYLPJPrPBwToVRkSko0WLJKNWrNDnfD7Zsk9PByIjGfREZF4T\nJgCffQacOqW6kpo8KuyXLgWmTlVdBRHRtbVvDwwdKqMGzcRjwr60VMbVjx6tuhIiItcmTwbeflt1\nFTV5TNinpspT7mbNVFdCRORaXBxQXAzs2aO6kks8JuyXLwceeUR1FUREdfPzAyZONFfr3iPC/t//\nBr7/Hrj7btWVEBHVz6OPSo9EVZXqSoRHhP2KFdKqb+IR1RIRAd27y+YmmzaprkSYPj6rqmRhIXbh\nEJGnGT/e2P1pG8L0Yb9+PdCunYyvJyLyJOPGAR98APz0k+pK6hH2DocDYWFhCAkJQXJy8jWP27x5\nM/z8/PDxxx/rWuA//ymTFIiIPI3dLhuRZ2errqSOsHc6nZg5cyYcDgcKCgqQmpqKPbWMJXI6nZg9\nezaGDx+u625UTiewahUwdqxupyQicquEBGm0quYy7PPy8mC32xEUFAR/f38kJCQgPT39quMWLVqE\nsWPHomPHjroW9/XXQEAAl0cgIs81bpw0Wi9cUFuHy7AvKytDYGBg9ec2mw1lZWVXHZOeno4ZM2YA\nkEV79PLhhzKRiojIU9lsQHg4sGaN2jpcLhRcn+CeNWsWFixYUL0ym6tunKSkpOo/x8bGIjY29prH\nVlUBH38MZGXVWQIRkamNHi0LOY4cWfex2dnZyDagk9/lEsc5OTlISkqCw+EAAMyfPx9NmjTB7Nmz\nq4+57bbbqgO+vLwczZs3xxtvvIH4+PiaF2rgMp2bNsmiZ7t3N+jnISIynf37gbvuAg4fbvh8Ib2W\nOHbZso+JiUFhYSGKi4vRpUsXpKWlIfWKQaMHDx6s/vPkyZPxwAMPXBX01+Ojj/hgloi8g90OdOwo\nG5L376+mBpe/Y/z8/JCSkoK4uDhERERg3LhxCA8Px+LFi7F48WLDitI0eaDx0EOGXYKIyK1GjQI+\n+UTd9U25U9WePbJq3LffAjo+7yUiUmbrVplRu3dvw3LNq3eq+vRT4P77GfRE5D3uuAP44Qfgm2/U\nXN+UYf/ZZ8B996mugohIPxYL8OCD6rpyTBf2J08C27YB99yjuhIiIn3ddx+Qmanm2qYL+y++kHXr\nuSMVEXmbQYOA/Hzg9Gn3X9t0Yf9zfz0Rkbdp3hwYMEDNbFpThb3TCTgc9ZtlRkTkiYYPBz7/3P3X\nNVXYb98OdOokS4ISEXmj4cOlUeueQe+XmCrss7KAIUNUV0FEZJywMPmvu4dgmirs16wBhg5VXQUR\nkXEslkute3cyTdj/+KMsfjZokOpKiIiMFRcnIw/dyTRhv3Gj7Mbepo3qSoiIjBUbK5l38aL7rmma\nsGcXDhH5iptuAm69VSaQuotpwp4PZ4nIl8TGuncjclOE/ZkzskmJqnWeiYjczSfDftMmICYGaNpU\ndSVERO5x993u7bc3Rdhv2CBbdhER+Qp399sz7ImIFImNBb76yj3XUh72lZXA5s3sryci33PXXdKV\n4w7Kwz4/Xzbj5fh6IvI1/frJM0t3rJOjPOzZhUNEvspmA268EThwwPhrMeyJiBTq319a90ZTGvaa\nJj/kgAEqqyAiUqdfPyAnx/jrKA37sjIJ/MBAlVUQEanjEy37LVtkMpXForIKIiJ17rgD2LsXOHfO\n2OuYIuyJiHxV06ZAZCSwdaux12HYExEpdscdxs+kVRb2miZh36uXqgqIiMyhZ0+Zc2QkZWH/7bfy\n9qVLF1UVEBGZg1eHPbtwiIhE9+7A/v2yPatRlIX91q3ST0VE5OtuvBEICQF27TLuGsrCfudOICpK\n1dWJiMylZ09jH9IqC/tdu2S4ERERGd9vryTsT58GTpyQhfuJiAiIjgZ27DDu/ErCfvduICICaKJ8\nGTYiInOIiAD27DFuuWMlcbtrlzx9JiIi0bEj4OcHHD1qzPmVhP2//83+eiKiK/3cujdCvcLe4XAg\nLCwMISEhSE5Ovur7K1asQFRUFHr06IE777wTO3fudHk+PpwlIrpaRARQUGDMuf3qOsDpdGLmzJnI\nysqC1WpF7969ER8fj/Dw8OpjbrvtNqxbtw5t2rSBw+HAE088gRwXCzQXFMgPRUREl4SHGxf2dbbs\n8/LyYLfbERQUBH9/fyQkJCA9Pb3GMf3790eb/2wi27dvX5SWll7zfKdPA+fPAwEBjayciMjLKG3Z\nl5WVIfCy3UVsNhtyc3OvefzSpUsxcuTIWr+XlJSEw4eBli2BtWtjERsb2/CKiYi8VEQEsGNHNpKS\nsnU/d51hb2nAziJfffUVli1bhq+//rrW7yclJWHlSmndM+eJiGoKCACqqmLx9NOxaN9evjZ37lxd\nzl1nN47VakVJSUn15yUlJbDZbFcdt3PnTkybNg2rV69Gu3btrnm+wkJZA4KIiGqyWIDgYODgQf3P\nXWfYx8TEoLCwEMXFxaisrERaWhri4+NrHHPo0CE89NBDWL58Oex2u8vzMeyJiK4tOBg4cED/89bZ\njePn54eUlBTExcXB6XRiypQpCA8Px+LFiwEA06dPx5/+9CecPHkSM2bMAAD4+/sjLy+v1vPt2wf8\n+tc6/gRERF7EqJa9RdOMmpx7xYUsFlRVabjpJgn8jh3dcVUiIs+yZAmQmwssXSqfWywW6BHTbp1B\ne/IkUFUFdOjgzqsSEXkOo7px3Br2hw4BXbvKQwgiIrqasge0eiopAS4bsk9ERFew2YDjx/XfotDt\nLftbbnHnFYmIPIufH9ClC1BWpu95GfZERCZjswEuVp25Lm7vxmHYExG5ZrV6eNizZU9EVDePb9kz\n7ImI6ubxYX/0qDx4ICKia/P4sL/pJsDf351XJCLyPDabh4/G6dzZnVcjIvJMHv+AtlMnd16NiMgz\ndewIfPcdoOfKZWzZExGZTNOmQPPmwKlT+p2TLXsiIhPq2BEoL9fvfGzZExGZ0M9dOXph2BMRmZBH\nhz03LCEiqp8OHTw47F3sQ05ERJfx6D77tm3deTUiIs/l0d04DHsiovpp1062ctWLW8O+TRt3Xo2I\nyHO1aQOcPq3f+dwa9s2bu/NqRESeq3Vr4MwZ/c7n1rDnRuNERPXj0S17IiKqn9atGfZERF6PLXsi\nIh/QogVw/rx+52PYExGZUPPmwLlz+p2PYU9EZEL+/sANN+h3PoY9EZFJtWih37kY9kREJrV8uX7n\nsmianhtfubiQxQI3XYqIyGvolZ1s2RMR+QCGPRGRD2DYExH5AIY9EZEPqDPsHQ4HwsLCEBISguTk\n5FqPSUxMREhICKKiopCfn697kXS17Oxs1SV4Dd5LffF+mpPLsHc6nZg5cyYcDgcKCgqQmpqKPXv2\n1DgmIyMD+/fvR2FhIZYsWYIZM2YYWjAJ/oPSD++lvng/zcll2Ofl5cFutyMoKAj+/v5ISEhAenp6\njWNWr16NSZMmAQD69u2LU6dO4dixY8ZVTEREDeYy7MvKyhAYGFj9uc1mQ1lZWZ3HlJaW6lwmERE1\nhp+rb1rqudvIlQP+r/X36ns+qp+5c+eqLsFr8F7qi/fTfFyGvdVqRUlJSfXnJSUlsNlsLo8pLS2F\n1Wq96lycPUtEpI7LbpyYmBgUFhaiuLgYlZWVSEtLQ3x8fI1j4uPj8e677wIAcnJy0LZtW3Tu3Nm4\niomIqMFctuz9/PyQkpKCuLg4OJ1OTJkyBeHh4Vi8eDEAYPr06Rg5ciQyMjJgt9vRokULvPXWW24p\nnIiIGkAzWGZmphYaGqrZ7XZtwYIFRl/Oa3Tt2lWLjIzUoqOjtd69e2uapmknTpzQhg4dqoWEhGjD\nhg3TTp48WX38vHnzNLvdroWGhmqff/65qrJNY/LkyVqnTp207t27V3/teu7fli1btO7du2t2u11L\nTEx0689gFrXdyzlz5mhWq1WLjo7WoqOjtYyMjOrv8V66dujQIS02NlaLiIjQunXrpi1cuFDTNONf\nn4aG/U8//aQFBwdrRUVFWmVlpRYVFaUVFBQYeUmvERQUpJ04caLG155//nktOTlZ0zRNW7BggTZ7\n9mxN0zRtBoj5AAADQElEQVRt9+7dWlRUlFZZWakVFRVpwcHBmtPpdHvNZrJu3Tpt27ZtNQKqIfev\nqqpK0zRN6927t5abm6tpmqaNGDFCy8zMdPNPol5t9zIpKUl75ZVXrjqW97JuR44c0fLz8zVN07SK\nigrt9ttv1woKCgx/fRq6XEJ9xunTtWlXPNS+fE7DpEmT8MknnwAA0tPTMX78ePj7+yMoKAh2ux15\neXlur9dMBg4ciHbt2tX4WkPuX25uLo4cOYKKigr06dMHAPDoo49W/x1fUtu9BGofdMF7Wbebb74Z\n0dHRAICWLVsiPDwcZWVlhr8+DQ37+ozTp9pZLBYMHToUMTExeOONNwAAx44dq3743blz5+rJa4cP\nH64xSor3uXYNvX9Xft1qtfK+XmbRokWIiorClClTcOrUKQC8lw1VXFyM/Px89O3b1/DXp6Fhz3H1\n1+/rr79Gfn4+MjMz8dprr2H9+vU1vm+xWFzeX9571+q6f+TajBkzUFRUhO3btyMgIADPPvus6pI8\nztmzZzFmzBgsXLgQrVq1qvE9I16fhoZ9fcbpU+0CAgIAAB07dsTo0aORl5eHzp074+jRowCAI0eO\noFOnTgDqP9fB1zXk/tlsNlit1hqzwXlfL+nUqVN1IE2dOrW625D3sn4uXryIMWPGYOLEiRg1ahQA\n41+fhoZ9fcbp09XOnz+PiooKAMC5c+fwxRdfIDIyEvHx8XjnnXcAAO+88071iyQ+Ph7//Oc/UVlZ\niaKiIhQWFlb349ElDb1/N998M1q3bo3c3Fxomob33nuv+u/4uiNHjlT/edWqVYiMjATAe1kfmqZh\nypQpiIiIwKxZs6q/bvjr05jnzZdkZGRot99+uxYcHKzNmzfP6Mt5hYMHD2pRUVFaVFSU1q1bt+r7\nduLECW3IkCG1Ds166aWXtODgYC00NFRzOByqSjeNhIQELSAgQPP399dsNpu2bNmy67p/Pw9tCw4O\n1p5++mkVP4pyV97LpUuXahMnTtQiIyO1Hj16aA8++KB29OjR6uN5L11bv369ZrFYtKioqOqhq5mZ\nmYa/Pt224TgREanDnaqIiHwAw56IyAcw7ImIfADDnojIBzDsiYh8AMOeiMgH/D+kyO/XM89L/AAA\nAABJRU5ErkJggg==\n"
+      }
+     ],
+     "prompt_number": 162
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "Image(url='http://upload.wikimedia.org/math/4/8/3/483efae2397ac62560aa6f61d4e2e830.png')"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "<img src=\"http://upload.wikimedia.org/math/4/8/3/483efae2397ac62560aa6f61d4e2e830.png\" />"
+       ],
+       "output_type": "pyout",
+       "prompt_number": 150,
+       "text": [
+        "<IPython.core.display.Image at 0x54b8cd0>"
+       ]
+      }
+     ],
+     "prompt_number": 150
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import scipy.integrate\n",
+      "quad=scipy.integrate.quad\n",
+      "pi * ( quad( lambda z:f(z)**2 , -1 , +1 , full_output=1 ) [0] )"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 163,
+       "text": [
+        "4.188790204786391"
+       ]
+      }
+     ],
+     "prompt_number": 163
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(4./3.)*pi"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 164,
+       "text": [
+        "4.1887902047863905"
+       ]
+      }
+     ],
+     "prompt_number": 164
     }
    ],
    "metadata": {}
