--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,5 +4,90 @@
  },
  "nbformat": 3,
  "nbformat_minor": 0,
- "worksheets": []
+ "worksheets": [
+  {
+   "cells": [
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from __future__ import division\n",
+      "from pylab import *\n",
+      "from tools import *\n",
+      "from collections import *\n",
+      "from math import *\n",
+      "from numpy import array, cos, sin\n",
+      "import functools\n",
+      "import scipy\n",
+      "import sympy\n",
+      "from IPython.display import Image\n",
+      "from scipy.integrate import quad\n",
+      "from sympy import *\n",
+      "import numpy as np\n",
+      "import scipy as sp\n",
+      "import time\n",
+      "from models import *\n",
+      "\n",
+      "\n",
+      "# l|r|t|b left right top bottom b|s big small c=circle\n",
+      "# C=center\n",
+      "# X,Y independent\n",
+      "# R=radius\n",
+      "# W=width H=height\n",
+      "# RI=inner ring radius\n",
+      "\n",
+      "profiles_definiton = load_profiles_lookup_table({})\n",
+      "ring_config = RingParams(W=6., H=1.8, CF=56., PROFILE='PR_014')\n",
+      "ring_config.lookup_definition(profiles_definiton)\n",
+      "\n",
+      "print 'Using configuration:'\n",
+      "print ring_config\n",
+      "\n",
+      "context = Context()\n",
+      "model = globals()[ring_config.MODEL](params=ring_config, context=context)\n",
+      "model.create_equations()\n",
+      "\n",
+      "print context\n",
+      "print 'vars:'\n",
+      "print model.context.variables\n",
+      "print\n",
+      "print\n",
+      "print 'eq:'\n",
+      "print model.context.equations\n",
+      "print\n",
+      "print\n",
+      "\n",
+      "solutions = model.solve()\n",
+      "\n",
+      "print solutions\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "KeyError",
+       "evalue": "'TR2'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-21-e8e21408b872>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[0mcontext\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mContext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mglobals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mring_config\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMODEL\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mring_config\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcontext\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcontext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_equations\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mKeyError\u001b[0m: 'TR2'"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Using configuration:\n",
+        "PR=PR_014 MDL=TR2 RI=8.912677 W=6.0 H=1.8 R60=0.0 R61=6.93 R20=0.6 R40=0.0 R41=0.68\n"
+       ]
+      }
+     ],
+     "prompt_number": 21
+    }
+   ],
+   "metadata": {}
+  }
+ ]
 }
