--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -22,6 +22,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "import xlrd\n",
       "book = xlrd.open_workbook('./parameters/PR_001_Daten.xlsx')"
      ],
      "language": "python",
