--- a/get_volumizer.ipynb
+++ b/get_volumizer.ipynb
@@ -154,6 +154,141 @@
       }
      ],
      "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import xlrd\n",
+      "book = xlrd.open_workbook('./parameters/PR_001_Daten.xlsx')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "s=book.sheet_by_index(0)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "widths=s.col(2)\n",
+      "heights=s.col(3)\n",
+      "r60s=s.col(4)\n",
+      "r61s=s.col(5)\n",
+      "r40s=s.col(6)\n",
+      "r41s=s.col(7)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for i in xrange(1,len(widths)):\n",
+      "    w=widths[i].value\n",
+      "    h=heights[i].value\n",
+      "    r60=r60s[i].value\n",
+      "    r61=r61s[i].value\n",
+      "    r40=r40s[i].value\n",
+      "    r41=r41s[i].value\n",
+      "    if r40 and r41 and r61:\n",
+      "        ring_config = RingParams(W=5., H=1.5, CF=56., PROFILE='PR_001')\n",
+      "        ring_config.lookup_definition(profiles_definiton)\n",
+      "        ring_config.W = w\n",
+      "        ring_config.H = h\n",
+      "        ring_config.R60 = round(r60,3)\n",
+      "        ring_config.R61 = round(r61,3)\n",
+      "        ring_config.R40 = round(r40,3)\n",
+      "        ring_config.R41 = round(r41,3)        \n",
+      "        print 'Using configuration:'\n",
+      "        print ring_config\n",
+      "        context = Context()\n",
+      "        model = globals()[ring_config.MODEL](params=ring_config, context=context)\n",
+      "        model.create_equations()        \n",
+      "        print 'Vol:',model.get_volume()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Using configuration:\n",
+        "PR=PR_001 MDL=TR13 RI=28.0/pi W=2.5 H=1.0 R60=0.0 R61=2.177 R20=0.0 R40=0.35 R41=0.456\n",
+        "solutions:"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 4\n",
+        "Vol: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.124116484264\n",
+        "Using configuration:\n",
+        "PR=PR_001 MDL=TR13 RI=28.0/pi W=2.5 H=1.1 R60=0.0 R61=1.903 R20=0.0 R40=0.35 R41=0.558\n",
+        "solutions:"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 4\n",
+        "Vol: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.136117436349\n",
+        "Using configuration:\n",
+        "PR=PR_001 MDL=TR13 RI=28.0/pi W=2.5 H=1.2 R60=0.0 R61=1.7 R20=0.0 R40=0.35 R41=0.672\n",
+        "solutions:"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 4\n",
+        "Vol: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.14821991219\n",
+        "Using configuration:\n",
+        "PR=PR_001 MDL=TR13 RI=28.0/pi W=2.5 H=1.3 R60=0.0 R61=1.545 R20=0.0 R40=0.35 R41=0.798\n",
+        "solutions:"
+       ]
+      }
+     ],
+     "prompt_number": "*"
     }
    ],
    "metadata": {}
